Bug 648585 - nsIHapticFeedback not defined on desktop build of fennec. r=smaug